# glpp

./: .gitignore  CMakeLists.txt  NOTES  README.md  game.cpp  game.h  gl.cpp  gl.h  input.cpp  input.h  main.cpp  utils.cpp  utils.h
game/: CMakeLists.txt  db.h  game.cpp  game.h  game_db.h  main.cpp  particles_3d.h  render_3d.cpp  render_3d.h  view_3d.cpp  view_3d.h
include/glpp/: angle_ext.h  angle_loader.h  assets.h  gl2.h  gles2.h  glpp.h  imgui.h  input.h  scene.h  types.h  ui.h  utils.h
include/glpp/gl2/: commands.h  enums.h  extensions.h  extensions_enums.h
include/glpp/gl2/osx/: extensions.h
include/glpp/gles2/: commands.h  enums.h  extensions.h  extensions_enums.h
include/glpp/gles2/angle/: extensions.h
res/: boxes-anim.blend  boxes-anim.blend1  boxes-anim.fbx  campfire.blend  campfire.blend1  campfire.fbx  dude-anim.blend  dude-anim.blend1  dude-anim.fbx  dude-anim2.blend  landscape.blend  trees.blend  trees.fbx  weapons.blend  weapons.fbx
res/shaders/: 2d.frag  3d.frag  3d.vert  3d_particle.frag  3d_particle.vert  3d_shadow.frag  3d_shadow_dir.vert  post.frag  prime.frag
shaders/: 2d.frag  2d.vert  3d.frag  3d.vert  3d_particle.frag  3d_particle.vert  3d_shadow.frag  3d_shadow.vert  post.frag  sprite.frag  sprite.vert  test2d.vert
src/: glpp.cpp  input.cpp  utils.cpp
src/gl2/: CMakeLists.txt  commands.cpp  extensions.cpp  gl2.cpp
src/gl2/glad/include/glad/: glad.h
src/gl2/glad/src/: glad.c
src/gl2/osx/: extensions.cpp
src/gles2/: CMakeLists.txt  angle_ext.cpp  angle_extension_macros.h  angle_loader.cpp  commands.cpp  extensions.cpp  gles2.cpp
src/gles2/angle/: extensions.cpp
src/gles2/glad/include/glad/: glad.h
src/gles2/glad/src/: glad.c
src/glew/include/glad/: glad.h
src/glew/src/: glad.c
src/glpp/: CMakeLists.txt  assets.cpp  glpp.cpp  input.cpp  scene.cpp  ui.cpp  utils.cpp
src/glpp/detail/: ai_helpers.cpp  ai_helpers.h  ai_structures.cpp  ai_structures.h
src/glpp/detail/imgui/: imconfig.h  imgui.cpp  imgui.h
src/glpp/detail/stb/: stb_easy_font.h
testbed/: CMakeLists.txt  buffer_demo.cpp  instanced_demo.cpp  main.cpp  text_demo.cpp  texture_batches_demo.cpp  triangle_demo.cpp  ui_demo.cpp
